--- a/src/themes/light/linux.qss
+++ b/src/themes/light/linux.qss
@@ -17,13 +17,13 @@ WindowContent QTabBar::tab:!selected { background: #fafafa; }
 WindowContent QTabBar::close-button { image: url(icons/close); }
 
 QToolButton { background: #ffffff; border: none; border-radius: 3px; color: #4d5357; margin: 0px; }
-QToolButton::checked { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
-QToolButton::pressed { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
+QToolButton:checked { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
+QToolButton:pressed { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
 
 SettingsWidget { background: #ffffff; padding: 0px 10px; }
 SettingsWidget SettingsListWidget CheckboxButton { background: #ffffff; border: none; border-radius: 3px; color: #4d5357; padding: 5px 10px; }
-SettingsWidget SettingsListWidget CheckboxButton::checked { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
-SettingsWidget SettingsListWidget CheckboxButton::pressed { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
+SettingsWidget SettingsListWidget CheckboxButton:checked { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
+SettingsWidget SettingsListWidget CheckboxButton:pressed { background: #f3f3f3; border: 1px solid #e4e4e4; border-radius: 3px; }
 
 SettingsWidget SettingsListWidget { border: none; }
 SettingsWidget SettingsListWidget::item:alternate { background: #fafafa; border: none;  }
@@ -33,23 +33,8 @@ SettingsWidget SettingsListWidget::item:selected:active { background: #fafafa; b
 SettingsWidget SettingsListWidget::item:hover { background: #fafafa; border: none;  }
 SettingsWidget SettingsListWidget DeviceWidget { margin: 10px; }
 
-DashboardSlider Title { font-size: 10px; }
-DashboardSlider QSlider { width: 20px; margin: 0px 10px; }
-DashboardSlider QSlider::groove:vertical { background: #ffffff; border-radius: 2px; width: 10px; }
-DashboardSlider QSlider::sub-page:vertical { background: #f6f6f6; border: 1px solid #aaa; border-radius: 2px; }
-DashboardSlider QSlider::add-page:vertical { background-color: #e0e0e0; background: #e0e0e0; border: 1px solid #aaa; border-radius: 1px; }
-DashboardSlider QSlider::handle:vertical { background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #eee, stop:1 #ccc); border: 1px solid #aaa; height: 13px; margin-left: -2px; margin-right: -2px; border-radius: 2px; }
-DashboardSlider QSlider::handle:vertical:hover { background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #fff, stop:1 #ddd); border: 1px solid #aaa; border-radius: 2px; width: 15px; }
-DashboardSlider QSlider::sub-page:vertical:disabled { background: #bbb; border-color: #aaa; }
-DashboardSlider QSlider::add-page:vertical:disabled { background: #eee; border-color: #aaa; }
-DashboardSlider QSlider::handle:vertical:disabled { background: #4e4e4e; border: 1px solid #aaa; border-radius: 4px; }
 
-QMainWindow { background: #ffffff; color: #4d5357; }
-SettingsWidget { background: #ffffff; }
-SettingsWidget TitleWidget { font-size: 18px; color: #4d5357; margin: 10px; }
-SettingsWidget DescriptionWidget { color: #4d5357; margin: 0px 10px; }
-
-
-DashboardWidget { background: #ffffff; color: #4d5357; }
-DashboardWidget TitleWidget { font-size: 18px; color: #4d5357; margin: 5px 10px; }
-DashboardWidget QTextEdit { border: none; color: #404040; }
+GroupWidget { margin: 5px; }
+GroupWidget Title { font-size: 16px; padding-left: 10px; }
+GroupWidget Description { font-size: 10px; padding-left: 10px;  }
+PackageWidget { margin: 15px; }
