--- a/src/themes/light/linux.qss
+++ b/src/themes/light/linux.qss
@@ -42,3 +42,10 @@ GroupWidget Title { font-size: 16px; padding-left: 10px; }
 GroupWidget Description { font-size: 10px; padding-left: 10px;  }
 PackageWidget { margin: 15px; }
 GroupWidget ImageWidget {margin: 3px; }
+
+
+
+DashboardWidget SettingsListWidget { border: none; }
+AppImageInstalledWidget Title { font-size: 16px; }
+AppImageInstalledWidget Description { font-size: 10px; }
+AppImageInstalledWidget ImageWidget { margin: 8px; }
