--- a/src/themes/light/linux.qss
+++ b/src/themes/light/linux.qss
@@ -41,12 +41,16 @@ GroupWidget { margin: 5px; }
 GroupWidget Title { font-size: 16px; padding-left: 10px; }
 GroupWidget Description { font-size: 10px; padding-left: 10px;  }
 PackageWidget { margin: 15px; }
+PackageWidget Description { background-color: rgba(255,255,255,80%); }
+
 GroupWidget ImageWidget {margin: 3px; }
+
 
 
 
 DashboardWidget SettingsListWidget { border: none; }
 AppImageInstalledWidget Title { font-size: 16px; }
+
 AppImageInstalledWidget Description { font-size: 10px; }
 AppImageInstalledWidget ImageWidget { background: #ffffff; padding: 8px; }
 AppImageInstalledWidget ToolbarWidget { background: #ffffff; border: none; }
