--- a/src/themes/light/linux.qss
+++ b/src/themes/light/linux.qss
@@ -53,4 +53,6 @@ AppImageInstalledWidget Title { font-size: 16px; }
 
 AppImageInstalledWidget Description { font-size: 10px; }
 AppImageInstalledWidget ImageWidget { background: #ffffff; padding: 8px; }
-AppImageInstalledWidget ToolbarWidget { background: #ffffff; border: none; }
+AppImageInstalledWidget AppImageInstalledToolbarWidget { background: rgba(255,255,255,65%); border: none; }
+
+ApprepoToolbarWidget SearchField { font-size: 16px; padding: 10px; }
