--- a/src/themes/light/linux.qss
+++ b/src/themes/light/linux.qss
@@ -49,11 +49,17 @@ GroupWidget ImageWidget {margin: 3px; }
 PreviewDashboardWidget { background: #fafafa; border: none;  }
 
 DashboardWidget SettingsListWidget { border: none; }
-AppImageInstalledWidget Title { font-size: 16px; }
-
-AppImageInstalledWidget Description { font-size: 10px; }
-AppImageInstalledWidget ImageWidget { background: #ffffff; padding: 8px; }
-AppImageInstalledWidget AppImageInstalledToolbarWidget { background: rgba(255,255,255,65%); border: none; }
+DashboardWidget SettingsListWidget::item { margin: 5px; }
+DashboardWidget SettingsListWidget AppImageInstalledWidget Title { font-size: 16px; }
+DashboardWidget SettingsListWidget AppImageInstalledWidget Description { font-size: 10px; }
+DashboardWidget SettingsListWidget AppImageInstalledWidget ImageWidget { background: #ffffff; padding: 5px; border-radius: 3px;}
+DashboardWidget SettingsListWidget AppImageInstalledWidget AppImageInstalledToolbarWidget { background: rgba(255,255,255,65%); border: none; }
 
 ApprepoToolbarWidget SearchField { font-size: 16px; padding: 10px; }
 ApprepoToolbarWidget DragAndDropImageWidget { background-color: #f3f3f3; border-radius: 3px;  padding:10px; margin: 0px 10px; }
+
+DashboardWidget ActionsListWidget { border: none; }
+DashboardWidget ActionsListWidget::item { margin: 5px; }
+DashboardWidget ActionsListWidget ActionsItemListWidget Title { font-size: 16px; }
+DashboardWidget ActionsListWidget ActionsItemListWidget Description { font-size: 10px; }
+DashboardWidget ActionsListWidget ActionsItemListWidget ImageWidget { background: #ffffff; padding: 5px; border-radius: 3px; }
